# cessda.ai.mcp.cdc

./: .dockerignore  .env.example  .env.http.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.http  README.md  apache-mcp-cessda.conf  docker-compose.yml  pyproject.toml  test_api.py  test_http_deployment.sh
src/mcp_cessda_datasets/: __init__.py  config.py  logging_config.py  server.py  server_http.py  tools.py
